--- a/styles/partials/components/_primary-nav.scss
+++ b/styles/partials/components/_primary-nav.scss
@@ -4,7 +4,7 @@
 .primary-nav{
     background-color: variables.$primary-background;
     color: variables.$primary-text;
-    font-family: 'AvenirNext';
+
     &__outer-container{
         display:flex;
         flex-direction:column;
@@ -73,7 +73,7 @@
        &__outer-container{
            display:flex;
            justify-content:flex-start;
-           max-width:75rem;
+           max-width:65rem;
            margin: 0 auto;
        }
     } 
